--- a/example.html
+++ b/example.html
@@ -8,6 +8,11 @@
     <meta name="author" content="">
     <title>Character Count - The Plugin</title>
     <link rel="stylesheet" type="text/css" href="css/char-count.css" />
+    <style>
+        input, textarea {
+            padding: 5px;
+        }
+    </style>
 </head>
 
 <body>
